--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 	<div id="footerwrap">
 		<div class="container">
 			<div class="col-lg-5">
-				<h3>Important links Links </h3>
+				<h3>Important social links:</h3>
 				<p>
 				<br/>
 				Google Plus : <a href="https://plus.google.com/communities/105082532082543680180">Community</a><br/>
