add downloads and community to the menu

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 	            <li class="active"><a href="#home" class="smothscroll">Home</a></li>
 	            <li><a href="#desc" class="smothscroll">Overview</a></li>
 	            <li><a href="#showcase" class="smothScroll">Features</a></li>
+	            <li><a href="http://sourceforge.net/projects/pixelrom/files/">Download</a></li>
+	            <li><a href="https://plus.google.com/communities/105082532082543680180">Community</a></li>
 	            <li><a href="#contact" class="smothScroll">Contact</a></li>
 	          </ul>
 	        </div><!--/.nav-collapse -->
