--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 	    			<br>
 	    			<img class="hidden-xs hidden-sm hidden-md" src="assets/img/arrow2.png">
 	    			<h5>Beautiful</h5>
-	    			<p>To use Pixel is to fall in love with it. You'll be captivated by its elegance.</p>
+	    			<p>To use PixelROM is to fall in love with it. You'll be captivated by its elegance.</p>
 	    		</div>
 	    	</div>
 	    </div> <!--/ .container -->
@@ -158,7 +158,7 @@
 		                    </div>
 		                    <div id="collapseTwo" class="accordion-body collapse">
 		                        <div class="accordion-inner">
-								<p>Pixel anticipates your needs, adapts to every situation and instantly delivers the information you want.</p>
+								<p>PixelROM anticipates your needs, adapts to every situation and instantly delivers the information you want.</p>
 								</div><!-- /accordion-inner -->
 		                    </div><!-- /collapse -->
 		                </div><!-- /accordion-group -->
@@ -172,7 +172,7 @@
 		                    </div>
 		                    <div id="collapseThree" class="accordion-body collapse">
 		                        <div class="accordion-inner">
-								<p>Pixel is packed with the features that made you want a smartphone in the first place. It fits your life perfectly so you can fit in with the world around you.</p>
+								<p>PixelROM is packed with the features that made you want a smartphone in the first place. It fits your life perfectly so you can fit in with the world around you.</p>
 								</div><!-- /accordion-inner -->
 		                    </div><!-- /collapse -->
 		                </div><!-- /accordion-group -->
@@ -208,14 +208,12 @@
 					<div id="carousel-example-generic" class="carousel slide">
 					  <!-- Indicators -->
 					  <ol class="carousel-indicators">
-					    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-					    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+						<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+						<li data-target="#carousel-example-generic" data-slide-to="1"></li>
 						<li data-target="#carousel-example-generic" data-slide-to="2"></li>
 						<li data-target="#carousel-example-generic" data-slide-to="3"></li>
 						<li data-target="#carousel-example-generic" data-slide-to="4"></li>
 						<li data-target="#carousel-example-generic" data-slide-to="5"></li>
-						<li data-target="#carousel-example-generic" data-slide-to="6"></li>
-						<li data-target="#carousel-example-generic" data-slide-to="7"></li>
 					  </ol>
 					
 					  <!-- Wrapper for slides -->
@@ -238,12 +236,6 @@
 						<div class="item">
 					      <img src="assets/img/item-06.png" alt="">
 					    </div>
-						<div class="item">
-					      <img src="assets/img/item-07.png" alt="">
-					    </div>
-						<div class="item">
-					      <img src="assets/img/item-08.png" alt="">
-					    </div>
 					  </div>
 					</div>
 				</div>
@@ -262,12 +254,12 @@
 				<h3>Important social links:</h3>
 				<p>
 				<br/>
-				Google Plus : <a href="https://plus.google.com/communities/105082532082543680180">Community</a><br/>
+				Google+ : <a href="https://plus.google.com/communities/105082532082543680180">Community</a><br/>
 				Facebook : <a href="https://www.facebook.com/Pixel2K14">Page</a><br/>
-				Arnav Gosain : <a href="https://plus.google.com/+ArnavGosain">Google Plus Profile</a><br/>
-				Aniruddh Chandratre : <a href="https://plus.google.com/+AniruddhChandratre">Google Plus Profile</a><br/>
+				Arnav Gosain : <a href="https://plus.google.com/+ArnavGosain">Google+ Profile</a><br/>
+				Aniruddh Chandratre : <a href="https://plus.google.com/+AniruddhChandratre">Google+ Profile</a><br/>
 				<br/>
-				<b>NOTE</b> : queries made on the above links will be given more priority than the contact form. Please prefer to use the above links to contact US.
+				<b>NOTE</b> : Queries made on the above links will be given more priority than the contact form. Please prefer to use the above links to Contact us.
 				</p>
 			</div>
 			
@@ -295,7 +287,7 @@
 	</div>
 	<div id="c">
 		<div class="container">
-			<p>Created by <a href="#home">PixelTeam</a></p>
+			<p>Created by <a href="www.html5up.com">HTML5UP</a>. Adapted for PixelROM by <a href="c-aniruddh.us.to">Aniruddh Chandratre</a></p>
 		
 		</div>
 	</div>
