--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 	</div>
 	<div id="c">
 		<div class="container">
-			<p>Created by <a href="www.html5up.com">HTML5UP</a>. Adapted for PixelROM by <a href="c-aniruddh.us.to">Aniruddh Chandratre</a></p>
+			<p>Created by <a href="http://www.html5up.com">HTML5UP</a>. Adapted for PixelROM by <a href="http://c-aniruddh.us.to">Aniruddh Chandratre</a>.</p>
 		
 		</div>
 	</div>
